infra/k8s/prod/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: prod
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
