infra/k8s/prod/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: grafana-prod.sawalha-polyai.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
