infra/k8s/prod/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus-prod.sawalha-polyai.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-svc
                port:
                  number: 9090
